# hadisplay

./: .gitignore  CMakeLists.txt  README.md  TODO.md  hadisplay-config.json
archive/: 2026-03-16-kobo-sleep-mode.md  2026-03-16-macos-kobo-setup-summary.md  2026-03-18-hwtcon-suspend-debug-summary.md  2026-03-18-sleep-mode-change-summary.md  2026-03-18-suspend-fix-and-eintr-investigation.md
cmake/kobo-libs/: libcurl.so.4
cmake/toolchains/: kobo.cmake
docker/: kobo-build.Dockerfile
docs/: color-output-spec.md  kobo-setup.md
infra/N306/: README.md  prepare.sh
scripts/: bootstrap-koreader.sh  build-kobo-in-docker.sh  deploy.sh  hadisplay-target.sh  logs.sh  run-hadisplay.sh  run-koreader-emulator.sh
src/app/: main.cpp
src/common/: app_config.cpp  app_config.h  ha_client.cpp  ha_client.h  json.cpp  json.h  kobo_platform.cpp  kobo_platform.h  logger.cpp  logger.h  scene.cpp  scene.h  scene_draw.cpp  scene_draw.h  scene_icons.cpp  scene_icons.h  scene_layout.cpp  scene_layout.h  scene_style.h  system_status.cpp  system_status.h
src/fbink_mirror/: main.cpp
src/fbink_smoke/: main.cpp
targets/: clara-colour.env  hackspace-kobo.env
